--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
 .App {
-  text-align: center;
+   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+   height: 40vmin;
+   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+   .App-logo {
+      animation: App-logo-spin infinite 20s linear;
+   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+   background-color: #282c34;
+   min-height: 100vh;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   font-size: calc(10px + 2vmin);
+   color: white;
 }
 
 .App-link {
-  color: #61dafb;
+   color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+   from {
+      transform: rotate(0deg);
+   }
+   to {
+      transform: rotate(360deg);
+   }
+}
+
+.svg-icon {
+   width: 20em;
+   height: 20em;
+}
+
+.svg-icon path,
+.svg-icon polygon,
+.svg-icon rect {
+   fill: #4691f6;
+}
+.svg-icon path:hover {
+   fill: red;
+   stroke: blue;
+}
+.svg-icon circle {
+   stroke: #4691f6;
+   stroke-width: 1;
+}
+
+.silhouette1 {
+   width: 20em;
+   height: 20em;
+}
+
+.silhouette1 path,
+.silhouette1 polygon,
+.silhouette1 rect {
+   fill: #4691f6;
+}
+
+.silhouette1 path:hover {
+   fill: cyan;
+   stroke: red;
+   pointer-events: all;
+}
+
+.bar:hover {
+   fill: red;
+   stroke: red;
+   pointer-events: all;
 }
